Fixed footer alignment and spacing on mobile

--- a/src/assets/sass/_footer.scss
+++ b/src/assets/sass/_footer.scss
@@ -25,5 +25,10 @@ footer {
 		    	color: $primary-color;
 		    }
 		}
+
+		@media only screen and ( max-width: 767px ) {
+			margin-top: 20px;
+    		justify-content: flex-start;
+		}
 	}
 }
